# aic

./: README.org  aic.cabal  default.nix
app/: Main.hs
nix/: sources.json
src/: Aic.hs  Args.hs  Parser.hs
test/: Main.hs
