name:                aic
synopsis:            Project synopsis
version:             0.0.1.0
homepage:            https://github.com/your_github_username/aic
license:             BSD3
author:              Your Name
maintainer:          Your Name
copyright:           Your Name
category:            Package.Category
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Aic, Parser
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5
                     , bytestring
                     , http-types
                     , optparse-applicative  
                     , wai


executable aic
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , aic
                    , bytestring
                    , http-types
                    , wai
                    , warp

test-suite aic-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , aic
                  , hedgehog
